crates/gossamer-diagnostics/tests/snapshots/GP0065.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0065]: An `f"..."` string holds a `{` that no `}` closes, or a `}` that no - here
--- framed ---
error[GP0065]: An `f"..."` string holds a `{` that no `}` closes, or a `}` that no
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
