crates/gossamer-diagnostics/tests/snapshots/GP0066.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0066]: A binary operator other than `|>` began a line. A line break before - here
--- framed ---
error[GP0066]: A binary operator other than `|>` began a line. A line break before
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
