crates/gossamer-diagnostics/tests/snapshots/GR0022.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0022]: A pattern that is a single name starting with an uppercase letter - here
--- framed ---
error[GR0022]: A pattern that is a single name starting with an uppercase letter
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
