crates/gossamer-diagnostics/tests/snapshots/GT0085.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0085]: A heap - a `MinHeap` or `MaxHeap` - named an element whose type - here
--- framed ---
error[GT0085]: A heap - a `MinHeap` or `MaxHeap` - named an element whose type
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
