crates/gossamer-diagnostics/tests/snapshots/GT0088.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0088]: A call to a function with a const generic parameter gave it no - here
--- framed ---
error[GT0088]: A call to a function with a const generic parameter gave it no
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
