crates/gossamer-diagnostics/tests/snapshots/GT0089.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0089]: A `Simd` or `Mask` vector named an element type, a lane count, or an - here
--- framed ---
error[GT0089]: A `Simd` or `Mask` vector named an element type, a lane count, or an
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
